2005-01-06  Olivier Chapuis  <olivier.chapuis@free.fr>

	* AUTHORS:
	* fvwm/move_resize.c (CMD_Maximize):
	Applied Arnaud Vrac patch which fixes maximize by growing vs
	EWMH working area

2004-12-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (do_button_style):
	ButtonStyle Reset takes effect immediately

2004-12-08  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: lang check.

2004-12-06  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	Really commit EWMHUseStackingOrderHints documentation update

2004-12-02  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	Fixed bug #1480 by updating EWMHUseStackingOrderHints documentation

	* NEWS:
	FvwmIconMan new options

	* libs/FTips.c (new file):
	* libs/FTips.h (new file):
	* libs/defaults.h:
	* libs/Makefile.am:
	Added a set of functions for implementing tool tips

2004-11-30  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Fix keysym description add XKeysymDB.

2004-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (__mloop_get_event):
	* fvwm/functions.c (execute_complex_function):
	* fvwm/add_window.c (AddWindow):
	* fvwm/module_interface.c (ExecuteModuleCommand):
	* fvwm/move_resize.c (__move_loop):
	(__resize_window):
	properly set the "state" member of faked motion and key events;
	fixes broken "nosnap" feature

2004-10-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (ParseBinding):
	reformatted
	* libs/Bindings.c (bindingAppliesToWindow):
	(__compare_binding):
	* fvwm/module_interface.c (CMD_ModuleSynchronous):
	* fvwm/builtins.c (CMD_Wait):
	(CMD_StrokeFunc):
	* fvwm/events.c (__handle_bpress_on_root):
	(HandleButtonRelease):
	fixed crash in window specific binding code
	fixed handling of root window in window specific binding code
	renamed some functions

2004-10-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (__update_windowlist):
	replaced while loop by for loop

	* fvwm/style.c (style_destroy_style):