@@ -31,6 +31,7 @@
 #include "config.h"
 
 #include <stdio.h>
+#include <math.h>
 #include <X11/keysym.h>
 
 #include "libs/fvwmlib.h"
@@ -289,29 +290,29 @@ static int GetOnePositionArgument(
 	}
 	else if (sscanf(s1,"w-%d",&val) == 1)
 	{
-		*pFinalX = x - (int)(val*factor);
+		*pFinalX = x - (int)(rintf(val*factor));
 	}
 	else if (sscanf(s1,"w+%d",&val) == 1 || sscanf(s1,"w%d",&val) == 1 )
 	{
-		*pFinalX = x + (int)(val*factor);
+		*pFinalX = x + (int)(rintf(val*factor));
 	}
 	else if (sscanf(s1,"m-%d",&val) == 1)
 	{
 		add_pointer_position = True;
-		*pFinalX = -(int)(val*factor);
+		*pFinalX = -(int)(rintf(val*factor));
 	}
 	else if (sscanf(s1,"m+%d",&val) == 1 || sscanf(s1,"m%d",&val) == 1 )
 	{
 		add_pointer_position = True;
-		*pFinalX = (int)(val*factor);
+		*pFinalX = (int)(rintf(val*factor));
 	}
 	else if (sscanf(s1,"-%d",&val) == 1)
 	{
-		*pFinalX = max-w - (int)(val*factor);
+		*pFinalX = max-w - (int)(rintf(val*factor));
 	}
 	else if (sscanf(s1,"+%d",&val) == 1 || sscanf(s1,"%d",&val) == 1)
 	{
-		*pFinalX = (int)(val*factor);
+		*pFinalX = (int)(rintf(val*factor));
 	}
 	else
 	{
